--- a/product/roundhouse.console/app.config
+++ b/product/roundhouse.console/app.config
@@ -2,9 +2,7 @@
 <configuration>
   <system.data>
     <DbProviderFactories>
-      <add name="Npgsql" invariant="Npgsql"
-      description=".Net Framework Data Provider for Postgres"
-      type="Npgsql.NpgsqlFactory, Npgsql, Version=3.0.3.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7"/>
+      <add name="Npgsql" invariant="Npgsql" description=".Net Framework Data Provider for Postgres" type="Npgsql.NpgsqlFactory, Npgsql, Version=3.0.3.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
     </DbProviderFactories>
   </system.data>
   <runtime>
