--- a/product/roundhouse.tasks/packages.config
+++ b/product/roundhouse.tasks/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net35" />
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net35" />
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
-  <package id="PublishedApplications" version="2.1.0.0" targetFramework="net35" />
-  <package id="structuremap" version="2.6.3" />
+  <package id="PublishedApplications" version="2.4.0.0" targetFramework="net45" />
+  <package id="StructureMap" version="4.5.2" targetFramework="net45" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net45" />
 </packages>
