--- a/product/roundhouse/packages.config
+++ b/product/roundhouse/packages.config
@@ -4,9 +4,10 @@
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net45" />
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net35" />
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net35" />
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net35" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
-  <package id="PublishedApplications" version="2.1.0.0" targetFramework="net35" />
-  <package id="structuremap" version="2.6.3" />
+  <package id="PublishedApplications" version="2.4.0.0" targetFramework="net45" />
+  <package id="StructureMap" version="4.5.2" targetFramework="net45" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net45" />
 </packages>
