--- a/product/roundhouse/targets/Microsoft.Application.targets
+++ b/product/roundhouse/targets/Microsoft.Application.targets
@@ -41,16 +41,9 @@ Copyright (C) 2005 Microsoft Corporation. All rights reserved.
   <!--***************************************************************-->
   <!--App.config -->
   <!--***************************************************************-->
-  <PropertyGroup>
-    <ProjectConfigFileName Condition="'$(ProjectConfigFileName)'==''">app.config</ProjectConfigFileName>
-  </PropertyGroup>
-  <ItemGroup>
-    <!--a item collection such that we can get the file name and extension from it-->
-    <AppConfigFileName Include="$(ProjectConfigFileName)" />
-  </ItemGroup>
   <Target Name="CopyAndRenameAppConfig">
-    <Copy SourceFiles="@(AppConfigFileName)"
-      DestinationFiles="@(AppConfigFileName->'$(ExeProjectOutputDir)\$(AssemblyName).exe%(Extension)')"
+    <Copy SourceFiles="@(AppConfigWithTargetPath)"
+      DestinationFiles="@(AppConfigWithTargetPath->'$(ExeProjectOutputDir)\$(AssemblyName).exe%(Extension)')"
       Retries="$(CopyRetryCount)"
       RetryDelayMilliseconds="$(CopyRetryDelayMilliseconds)" 
       Condition="Exists('%(RootDir)%(Directory)%(Filename)%(Extension)')"
@@ -226,11 +219,11 @@ Copyright (C) 2005 Microsoft Corporation. All rights reserved.
   <Target Name ="_BuiltExeOutputGroupOutput"
           Condition="!$(Disable_CopyExeApplication)"
           Outputs="@(BuiltExeOutputGroupOutput)">
-    <CreateItem Include="$(ExeProjectOutputDir)\bin\**\*.*;@(Content->'%(FullPath)')" Condition="'$(OutDir)' == '$(OutputPath)'">
+    <CreateItem Include="$(ExeProjectOutputDir)\bin\**\*;@(Content->'%(FullPath)')" Condition="'$(OutDir)' == '$(OutputPath)'">
       <Output ItemName="BuiltExeOutputGroupOutput" TaskParameter="Include"/>
     </CreateItem>
 
-    <CreateItem Include="$(ExeProjectOutputDir)\**\*.*" Condition="'$(OutDir)' != '$(OutputPath)'">
+    <CreateItem Include="$(ExeProjectOutputDir)\**\*" Condition="'$(OutDir)' != '$(OutputPath)'">
       <Output ItemName="BuiltExeOutputGroupOutput" TaskParameter="Include"/>
     </CreateItem>
   </Target>
